src/runtime/crates/z42-macros/tests/fail/derive_z42type_redirect.rs
use z42_macros::Z42Type;

#[derive(Z42Type)]
struct Counter { value: i64 }

fn main() {}
